<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alejandrogs.bdpractica.MainActivity">

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/bd_practica"
        android:textAlignment="center"
        android:textSize="38dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_clave"
        android:layout_width="368dp"
        android:layout_below="@+id/label"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/edit_clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/clave" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_descripcion"
        android:layout_centerHorizontal="true"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_clave"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/edit_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripci_n"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_precio"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout_descripcion"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/edit_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio" />
    </android.support.design.widget.TextInputLayout>

        <Button

        android:id="@+id/btn_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Alta"
        android:theme="@style/MyButton"
        android:layout_below="@id/layout_precio"
        android:layout_centerHorizontal="true"
        android:text="@string/ingresar" />

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/MyButton"
        android:id="@+id/btn_consulta"
        android:layout_below="@id/btn_ingresar"
        android:layout_centerHorizontal="true"
        android:text="@string/consultar_por_clave"
        android:onClick="consultaporclave"/>

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_consulta"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_consulta2"
        android:theme="@style/MyButton"
        android:text="@string/consulta_por_descripci_n"
        android:onClick="consultapordes"/>

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_eliminar"
        android:text="@string/eliminar"
        android:theme="@style/MyButton"
        android:layout_below="@id/btn_consulta2"
        android:layout_centerHorizontal="true"
        android:onClick="eliminar"/>

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/MyButton"
        android:id="@+id/btn_modificar"
        android:text="@string/modificar"
        android:layout_below="@id/btn_eliminar"
        android:layout_centerHorizontal="true"
        android:onClick="modificar"/>

</RelativeLayout>
